lib/GSL/Special/bessel.h

int gsl_sf_bessel_J0_e(double x,double* result);
double gsl_sf_bessel_J0(double x);
int gsl_sf_bessel_J1_e(double x,double* result);
double gsl_sf_bessel_J1(double x);
int gsl_sf_bessel_Jn_e(int n,double x,double* result);
double gsl_sf_bessel_Jn(int n,double x);
int gsl_sf_bessel_Jn_array(int nmin,int nmax,double x,double* result_array);
int gsl_sf_bessel_Y0_e(double x,double* result);
double gsl_sf_bessel_Y0(double x);
int gsl_sf_bessel_Y1_e(double x,double* result);
double gsl_sf_bessel_Y1(double x);
int gsl_sf_bessel_Yn_e(int n,double x,double* result);
double gsl_sf_bessel_Yn(int n,double x);
int gsl_sf_bessel_Yn_array(int nmin,int nmax,double x,double* result_array);
int gsl_sf_bessel_I0_e(double x,double* result);
double gsl_sf_bessel_I0(double x);
int gsl_sf_bessel_I1_e(double x,double* result);
double gsl_sf_bessel_I1(double x);
int gsl_sf_bessel_In_e(int n,double x,double* result);
double gsl_sf_bessel_In(int n,double x);
int gsl_sf_bessel_In_array(int nmin,int nmax,double x,double* result_array);
int gsl_sf_bessel_I0_scaled_e(double x,double* result);
double gsl_sf_bessel_I0_scaled(double x);
int gsl_sf_bessel_I1_scaled_e(double x,double* result);
double gsl_sf_bessel_I1_scaled(double x);
int gsl_sf_bessel_In_scaled_e(int n,double x,double* result);